objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Account__r.External_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <description>REPORTING ONLY FIELD. This field will be populated with the activity type so it can be visible on custom report types.</description>
        <label>Activity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Presenters__c</fullName>
        <description>Presenters for topics other than Wellness at the meeting</description>
        <label>Additional Presenters</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_Partner__c</fullName>
        <label>Assigned Partner</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Executive</fullName>
                </value>
                <value>
                    <fullName>Accounts Receivable</fullName>
                </value>
                <value>
                    <fullName>Account Support Services</fullName>
                </value>
                <value>
                    <fullName>Actuarial</fullName>
                </value>
                <value>
                    <fullName>Blue Directions</fullName>
                </value>
                <value>
                    <fullName>CAS Reporting</fullName>
                </value>
                <value>
                    <fullName>CBSR Team</fullName>
                </value>
                <value>
                    <fullName>CDHP</fullName>
                </value>
                <value>
                    <fullName>Client Analytic Consultants</fullName>
                </value>
                <value>
                    <fullName>COBRA</fullName>
                </value>
                <value>
                    <fullName>Coding</fullName>
                </value>
                <value>
                    <fullName>Contract Administration</fullName>
                </value>
                <value>
                    <fullName>Contracting - ASO Agreement</fullName>
                </value>
                <value>
                    <fullName>Contracting - Benefit Booklets</fullName>
                </value>
                <value>
                    <fullName>Contract Processing</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>ECE Enterprise Client Extracts</fullName>
                </value>
                <value>
                    <fullName>Enrollment Services</fullName>
                </value>
                <value>
                    <fullName>Enterprise Eligibility Team</fullName>
                </value>
                <value>
                    <fullName>Enterprise Pharmacy Operations</fullName>
                </value>
                <value>
                    <fullName>Financial Operations</fullName>
                </value>
                <value>
                    <fullName>Fraud and Abuse</fullName>
                </value>
                <value>
                    <fullName>FSU - Benefit Specialist</fullName>
                </value>
                <value>
                    <fullName>FSU - Claims</fullName>
                </value>
                <value>
                    <fullName>FSU - CMS</fullName>
                </value>
                <value>
                    <fullName>FSU - Eligibility</fullName>
                </value>
                <value>
                    <fullName>FSU - Membership Specialist</fullName>
                </value>
                <value>
                    <fullName>Group Benefit Specialist</fullName>
                </value>
                <value>
                    <fullName>Group Fulfillment Center</fullName>
                </value>
                <value>
                    <fullName>Healthcare Management - Clinical Consultants</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Audits</fullName>
                </value>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>Billing Explained</fullName>
                </value>
                <value>
                    <fullName>Case Management and Wellness</fullName>
                </value>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>CMS Demand Letters</fullName>
                </value>
                <value>
                    <fullName>Contract Administration</fullName>
                </value>
                <value>
                    <fullName>General Inquiry</fullName>
                </value>
                <value>
                    <fullName>Group Exception</fullName>
                </value>
                <value>
                    <fullName>Membership</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Real Time Benefits</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Rx</fullName>
                </value>
                <value>
                    <fullName>Service Center</fullName>
                </value>
                <value>
                    <fullName>Subrogation</fullName>
                </value>
                <value>
                    <fullName>Vendor Type</fullName>
                </value>
                <value>
                    <fullName>Care Management and Wellness</fullName>
                    <isActive>false</isActive>
                    <label>Care Management and Wellness</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Complexity__c</fullName>
        <inlineHelpText>Level 1 = &lt;24 hrs, Level 2 = 24-72 hrs, Level 3 = 72+ hrs</inlineHelpText>
        <label>Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1</fullName>
                    <default>true</default>
                    <label>Level 1</label>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing Rep</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Group Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Feedback__c</fullName>
        <description>Text field to enter Voice of Customer feedback</description>
        <label>Customer Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DB_Activity_Type__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>IF(CONTAINS( Subject , &quot;Email&quot;), &quot;Email&quot;, IF(CONTAINS( Subject , &quot;Cold Call&quot;), &quot;Cold Call&quot;, IF(CONTAINS( Subject , &quot;Call&quot;), &quot;Call&quot;, IF(CONTAINS( Subject , &quot;Meeting&quot;), &quot;Meeting&quot;, IF(CONTAINS( Subject , &quot;On Site Visit&quot;), &quot;Site Visit&quot;, IF(CONTAINS( Subject , &quot;Quote&quot;), &quot;Send Letter/Quote&quot;, &quot;Other&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <description>Number of days from creation date to close date for the task.</description>
        <formula>CASE(RecordType.DeveloperName, 
&quot;CSS_Task_Record_Type&quot;, 
IF(((TODAY() - Task_Created_Date__c) = 0),1,Task_Closed_Date__c - Task_Created_Date__c), 
VALUE(IF(ISBLANK(Task_Closed_Date__c), TEXT(TODAY() - DATEVALUE(CreatedDate)),
TEXT(Task_Closed_Date__c - DATEVALUE(CreatedDate)))))</formula>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Resolution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Direct_Indirect_Manager_of_Owner__c</fullName>
        <description>This field is to check if the manager or indirect manager of an Activity record owner is the logged in user.</description>
        <formula>OR( $User.Id =  Owner:User.ManagerId  , $User.Id =  Owner:User.Manager.ManagerId  , $User.Id = Owner:User.Manager.Manager.ManagerId, $User.Id = Owner:User.Manager.Manager.Manager.ManagerId )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner on My Team?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disposition_Description__c</fullName>
        <label>Disposition Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Interest, reason not given</fullName>
                </value>
                <value>
                    <fullName>No Interest, reason given</fullName>
                </value>
                <value>
                    <fullName>Interested – Schedule Next Meeting</fullName>
                </value>
                <value>
                    <fullName>Future Follow-Up</fullName>
                </value>
                <value>
                    <fullName>Meeting Scheduled</fullName>
                </value>
                <value>
                    <fullName>Waiting on Additional Information</fullName>
                </value>
                <value>
                    <fullName>Completed – Implementation Ready</fullName>
                </value>
                <value>
                    <fullName>Waiting on Completed Paperwork</fullName>
                </value>
                <value>
                    <fullName>Paperwork Submitted</fullName>
                </value>
                <value>
                    <fullName>OE Started</fullName>
                </value>
                <value>
                    <fullName>OE Closed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>75 day Renewal Reminder Sent</fullName>
                </value>
                <value>
                    <fullName>60 day Renewal Reminder Sent</fullName>
                </value>
                <value>
                    <fullName>Renewal Meeting Scheduled</fullName>
                </value>
                <value>
                    <fullName>No Longer Interested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escalated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>External ID of the record from Source System</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Follow_Up_Date__c</fullName>
        <label>Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GEMS_Account_Name__c</fullName>
        <formula>GEMS_Account_Submission_Info__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEMS_Account_Number__c</fullName>
        <formula>GEMS_Account_Submission_Info__r.Account.External_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEMS_Account_Submission_Info__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Submission Info</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GEMS_Account_Submission_Owner_Email__c</fullName>
        <label>Account Submission Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GEMS_Case_Effective_Date__c</fullName>
        <formula>GEMS_Account_Submission_Info__r.GEMS_Case_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GEMS_End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GEMS_Opportunity__c</fullName>
        <formula>GEMS_Account_Submission_Info__r.Opportunity_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEMS_Pharmacy_Scope_Code__c</fullName>
        <formula>HYPERLINK( &apos;/&apos;+WhatId, &apos;View Pharmacy Scope Code&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pharmacy Scope Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEMS_Record_Type__c</fullName>
        <formula>RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GEMS Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEMS_Related_To_Owner__c</fullName>
        <formula>IF(NOT(ISBLANK(Owner:User.FirstName) &amp;&amp; ISBLANK(Owner:User.LastName)),Owner:User.FirstName +&apos; &apos;+ Owner:User.LastName,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related To Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEMS_Return_Reasons__c</fullName>
        <label>Return Reasons</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO Billing Issue (case sent to Accnt. Specialist)</fullName>
                </value>
                <value>
                    <fullName>BlueSTAR Issue(case sent to Accnt. Specialist)</fullName>
                </value>
                <value>
                    <fullName>Missing doc</fullName>
                </value>
                <value>
                    <fullName>Incomplete doc</fullName>
                </value>
                <value>
                    <fullName>Ambiguous/Clarification Required</fullName>
                </value>
                <value>
                    <fullName>Benefit cannot be supported</fullName>
                </value>
                <value>
                    <fullName>Benefit discrepancy</fullName>
                </value>
                <value>
                    <fullName>Rate discrepancy</fullName>
                </value>
                <value>
                    <fullName>Enrollment discrepancy</fullName>
                </value>
                <value>
                    <fullName>Benefit not compliant</fullName>
                </value>
                <value>
                    <fullName>CBSR required</fullName>
                </value>
                <value>
                    <fullName>Benefit not filed / approved by DOL</fullName>
                </value>
                <value>
                    <fullName>Inaccurate or Missing Commission Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GEMS_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GEMS_Submission_Sub_Type__c</fullName>
        <label>Submission Sub Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GEMS_Submission_Type__c</fullName>
        <label>Submission Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GEMS_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pharmacy Scope Code Owner</fullName>
                </value>
                <value>
                    <fullName>Pharmacy Scope Code Account Specialist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GEMS_UnderWriting_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GEMS_UnderWriting_N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GEMS_UnderWriting_No__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GEMS UnderWriting No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GEMS_UnderWriting_Yes_No__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GEMS_UnderWriting_Yes/No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HCM_Prep_Time__c</fullName>
        <description>Time spent preparing for the meeting in hours</description>
        <label>HCM Prep Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HCM_Services_Sold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Were any Health Care Management programs sold during or as a result of this meeting?</description>
        <label>HCM Services Sold?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LIU_equals_the_Manager_of_AccountOwner__c</fullName>
        <formula>IF($User.Id = Account.Owner.ManagerId,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LIU equals the Manager of AccountOwner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LIU_equals_the_Manager_of_AssignedTo__c</fullName>
        <formula>IF($User.Id = Owner:User.ManagerId ,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LIU equals the Manager of AssignedTo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LIU_is_Manager_of_AccountOwner_Manager__c</fullName>
        <formula>IF($User.Id = Account.Owner.Manager.Manager_of_the_User_s_Manager__c,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LIU is Manager of AccountOwner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LIU_is_Manager_of_AssignedTo_Manager__c</fullName>
        <formula>IF($User.Id = Owner:User.Manager.Manager_of_the_User_s_Manager__c,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LIU is Manager of AssignedTo Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Assigned_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Assigned Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loggedin_User_equals_AccountOwner_User__c</fullName>
        <description>REPORTING ONLY FIELD. This field checks o see if the Logged in User is the same User ID of the Account Owner of the Account related to an activity.</description>
        <formula>IF($User.Id = Account.OwnerId,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LIU equals AccountOwner User?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loggedin_User_equals_AssignedTo_User__c</fullName>
        <description>REPORTING ONLY FIELD. This field checks o see if the Logged in User is the same User ID of the User Assigned To the activity</description>
        <formula>IF($User.Id =  Owner:User.Id ,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LIU equals AssignedTo User?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Source__c</fullName>
        <description>This will be used during migrations to identify the source</description>
        <label>Migration Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_additional_information__c</fullName>
        <label>Migration additional information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Num_of_Client_Visits__c</fullName>
        <description>REPORTING ONLY FIELD. This field will be populated with a 1 if the activity type is signifies a client visit.</description>
        <formula>IF(OR(Activity_Type__c = &quot;Social&quot;,Activity_Type__c=&quot;In Person Meeting&quot;,Activity_Type__c=&quot;In Person Visit&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Client Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Sub_Category__c</fullName>
        <label>Other Sub Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <description>Owner Full Name</description>
        <formula>Owner:User.FirstName  + &apos; &apos;+ Owner:User.LastName</formula>
        <inlineHelpText>Owner Full Name</inlineHelpText>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_of_Record__c</fullName>
        <description>This field will be used to capture if the current logged in user is the owner of the Activity record.</description>
        <formula>$User.Id =  Owner:User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner of Record?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_s_Manager_Name__c</fullName>
        <description>This field will be used to capture the name of the Activity record owner&apos;s managers name</description>
        <formula>Owner:User.Manager.FirstName  + &quot; &quot; +  Owner:User.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner&apos;s Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paper_Work_Due_Date__c</fullName>
        <label>Paper Work Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Paper_Work_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paper Work Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Private_Exchange_Discussed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether Private Exchanges were discussed in a meeting</description>
        <label>Private Exchange Discussed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <formula>$Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Time__c</fullName>
        <formula>Closed_Date__c -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Broker/Agent</fullName>
                </value>
                <value>
                    <fullName>Group Admin</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Webinar Attendance</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Inbound Outreach</fullName>
                </value>
                <value>
                    <fullName>Outbound Outreach</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>90-day email</fullName>
                </value>
                <value>
                    <fullName>60-day email</fullName>
                </value>
                <value>
                    <fullName>Paperwork initiated</fullName>
                </value>
                <value>
                    <fullName>Paperwork submitted</fullName>
                </value>
                <value>
                    <fullName>Open Enrollment</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party Disease Management</fullName>
                </value>
                <value>
                    <fullName>ABS/Matrix Updates</fullName>
                </value>
                <value>
                    <fullName>ACA</fullName>
                </value>
                <value>
                    <fullName>Accums Inquiry</fullName>
                </value>
                <value>
                    <fullName>Additional Information Request</fullName>
                </value>
                <value>
                    <fullName>Add Member</fullName>
                </value>
                <value>
                    <fullName>Adjustment Request</fullName>
                </value>
                <value>
                    <fullName>Advocacy</fullName>
                </value>
                <value>
                    <fullName>Alt Net Related Issue</fullName>
                </value>
                <value>
                    <fullName>Appeal</fullName>
                </value>
                <value>
                    <fullName>Audit</fullName>
                </value>
                <value>
                    <fullName>BAE Portal</fullName>
                </value>
                <value>
                    <fullName>BAM PortaL</fullName>
                </value>
                <value>
                    <fullName>Benefit Booklet</fullName>
                </value>
                <value>
                    <fullName>Benefit Inquiry</fullName>
                </value>
                <value>
                    <fullName>Benefit Interpretation</fullName>
                </value>
                <value>
                    <fullName>Benefit Overview/Clarification</fullName>
                </value>
                <value>
                    <fullName>Benefits Exception</fullName>
                </value>
                <value>
                    <fullName>Benefit Value Advisor</fullName>
                </value>
                <value>
                    <fullName>Blue Care Connection/Blue Elite</fullName>
                </value>
                <value>
                    <fullName>Call Routing</fullName>
                </value>
                <value>
                    <fullName>Cancel Member</fullName>
                </value>
                <value>
                    <fullName>Case Management</fullName>
                </value>
                <value>
                    <fullName>Claim Denial</fullName>
                </value>
                <value>
                    <fullName>Claim Detail/Status Request</fullName>
                </value>
                <value>
                    <fullName>Claim Detail Request</fullName>
                </value>
                <value>
                    <fullName>Claim Exception</fullName>
                </value>
                <value>
                    <fullName>Claim Impact Reports</fullName>
                </value>
                <value>
                    <fullName>Claim in Process</fullName>
                </value>
                <value>
                    <fullName>Claim Not on File</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>